Fix test coverage

--- a/gcovr.cfg
+++ b/gcovr.cfg
@@ -1,4 +1,4 @@
-filter = include/
+filter = include/cudawrappers
 filter = src/
 html-details = yes  # info about each source file
 output = build/coverage.html
