Add cmake configuration for tests

--- a/examples/vector_add/CMakeLists.txt
+++ b/examples/vector_add/CMakeLists.txt
@@ -14,7 +14,7 @@ function(include_cuda_code target input_file)
 endfunction(include_cuda_code)
 
 add_executable(vector_add vector_add.cpp)
-target_link_libraries(vector_add PRIVATE cudawrappers::cu cudawrappers::nvrtc)
+target_link_libraries(vector_add PRIVATE cudawrappers::cu CUDA::cudart cudawrappers::cufft cudawrappers::nvrtc)
 include_cuda_code(vector_add kernels/vector_add_kernel.cu)
 
 add_test(NAME vector_add COMMAND vector_add)
