--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,11 @@ repos:
         types_or: ['c++', 'cuda']
         args: ['-p=build']
       - id: cppcheck
-        args: ['--project=build/compile_commands.json', '--suppress=*:build/*']
+        args:
+          - '--project=build/compile_commands.json'
+          - '--suppress=*:build/*'
+          - '--suppress=unusedFunction:*/*'
+          - '--suppress=unreadVariable:tests/*'
   - repo: https://github.com/cheshirekow/cmake-format-precommit
     rev: v0.6.13
     hooks:
