--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - yamllint==1.31.0
   - pip:
       - pre-commit
+      - bump2version==1.0.1
       - clang-format==16.0.6
       - cmakelang==0.6.13
       - flawfinder==2.0.19
