--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -8,6 +8,13 @@ jobs:
   linting:
     name: run
     runs-on: ubuntu-latest
+    env:
+        # gcc and clang are the latest supported by the CI runner,
+        # ubuntu 22.04 at the time of writing
+        gcc-version: 12  # = 12.1.0
+        clang-version: 14  # = 14.0.0
+        # cuda version to install with separate action
+        cuda-version: "12.1.0"
     steps:
 
       - name: Show git version
@@ -43,10 +50,15 @@ jobs:
           git checkout ${{ env.precommit_from_ref }}
           git checkout ${{ env.precommit_to_ref }}
 
+      - name: Install cuda
+        uses: Jimver/cuda-toolkit@v0.2
+        with:
+          cuda: ${{ env.cuda-version }}
+
       - name: Generate compilation database
         shell: bash -el {0}
         run: |
-          cmake -DCMAKE_CXX_COMPILER=clang++ -DCUDAWRAPPERS_BUILD_TESTING=True -DCUDAWRAPPERS_BUILD_EXAMPLES=True -S . -B build
+          cmake -DCMAKE_CXX_COMPILER=g++-${{ env.gcc-version }} -DCUDAWRAPPERS_BUILD_TESTING=True -DCUDAWRAPPERS_BUILD_EXAMPLES=True -S . -B build
 
       - name: Run pre-commit on all files changed in this branch using project standard configuration
         shell: bash -el {0}
