--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,7 +14,7 @@ jobs:
         gcc-version: 12  # = 12.1.0
         clang-version: 14  # = 14.0.0
         # cuda version to install with separate action
-        cuda-version: "12.1.0"
+        cuda-version: "12.2.0"
     steps:
 
       - name: Show git version
@@ -54,6 +54,9 @@ jobs:
         uses: Jimver/cuda-toolkit@v0.2.11
         with:
           cuda: ${{ env.cuda-version }}
+          method: "network"
+          sub-packages: ["nvcc"]
+          linux-localargs: ["--toolkit"]
 
       - name: Generate compilation database
         shell: bash -el {0}
