Add required cuda subpackages

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           cuda: ${{ env.cuda-version }}
           method: "network"
-          sub-packages: '["nvcc"]'
+          sub-packages: '["nvcc", "nvrtc", "nvtx", "cufft"]'
           linux-local-args: '["--toolkit"]'
 
       - name: Generate compilation database
