--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -59,9 +59,10 @@ jobs:
           non-cuda-sub-packages: '["libcufft-dev", "libcublas-dev"]'
           linux-local-args: '["--toolkit"]'
 
-      - name: Install pre-commit
+      - name: Install pre-commit and cppcheck
         run: |
           pip install pre-commit
+          sudo apt install cppcheck -y
 
       - name: Generate compilation database
         shell: bash -el {0}
@@ -72,5 +73,6 @@ jobs:
         shell: bash -el {0}
         run: |
           git diff --name-only ${{ env.precommit_from_ref }}...${{ env.precommit_to_ref }}
+          clang-format --version
           pre-commit run -a
           #pre-commit run --from-ref ${{ env.precommit_from_ref }} --to-ref ${{ env.precommit_to_ref }}
