Remove libcublas from CI; takes a while and seems like we don't actually need it

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -58,7 +58,7 @@ jobs:
           cuda: ${{ env.cuda-version }}
           method: "network"
           sub-packages: '["nvcc", "nvrtc-dev", "nvtx"]'
-          non-cuda-sub-packages: '["libcufft-dev", "libcublas-dev"]'
+          non-cuda-sub-packages: '["libcufft-dev"]'
           linux-local-args: '["--toolkit"]'
 
       - name: Install pre-commit and related tools
