make cppcheck stop complain about unmatched suppression unreadVariable

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
           - '--suppress=unusedFunction:*/*'
           - '--suppress=unreadVariable:tests/*'
           - '--suppress=missingIncludeSystem'
+          - '--suppress=unmatchedSuppression'
   - repo: https://github.com/cheshirekow/cmake-format-precommit
     rev: v0.6.13
     hooks:
