--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -68,13 +68,13 @@ jobs:
 
       - name: Show tool versions
         run: |
-           nvcc --version
-           g++-${{ env.gcc-version}} --version
-           clang-format --version
-           clang-tidy --version
-           cppcheck --version
-           cmake-lint --version
-           cmake-format --version
+           echo "nvcc: $(nvcc --version)"
+           echo "g++: $(g++-${{ env.gcc-version}} --version)"
+           echo "clang-format: $(clang-format --version)"
+           echo "clang-tidy: $(clang-tidy --version)"
+           echo "cppcheck: $(cppcheck --version)"
+           echo "cmake-lint: $(cmake-lint --version)"
+           echo "cmake-format: $(cmake-format --version)"
 
       - name: Generate compilation database
         shell: bash -el {0}
@@ -85,5 +85,4 @@ jobs:
         shell: bash -el {0}
         run: |
           git diff --name-only ${{ env.precommit_from_ref }}...${{ env.precommit_to_ref }}
-          pre-commit run -a
-          #pre-commit run --from-ref ${{ env.precommit_from_ref }} --to-ref ${{ env.precommit_to_ref }}
+          pre-commit run --from-ref ${{ env.precommit_from_ref }} --to-ref ${{ env.precommit_to_ref }}
