--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v16.0.6
+    rev: v14.0.0
     hooks:
       - id: clang-format
   - repo: https://github.com/pocc/pre-commit-hooks
@@ -12,6 +12,8 @@ repos:
           - '--suppress=*:build/*'
           - '--suppress=unusedFunction:*/*'
           - '--suppress=unreadVariable:tests/*'
+          - '--suppress=missingIncludeSystem'
+          - '--suppress=unmatchedSuppression'
   - repo: https://github.com/cheshirekow/cmake-format-precommit
     rev: v0.6.13
     hooks:
