Remove comment on gcc version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     env:
         # set tools versions to latest supported by the CI runner,
         # ubuntu 22.04 at the time of writing
-        gcc-version: "12"  # = 12.1.0
+        gcc-version: "12" 
         # cuda version to install with separate action
         cuda-version: "12.2.0"
     steps:
