--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,12 @@ repos:
     hooks:
       - id: cmake-format
       - id: cmake-lint
+  - repo: https://github.com/executablebooks/mdformat
+    rev: 0.7.17
+    hooks:
+    - id: mdformat
+      args: ['--wrap=80']
+      files: CHANGELOG.md
 
 ci:
   skip:
