Add missing wildcard for build directory suppression

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
       - id: cppcheck
         args:
           - '--project=build/compile_commands.json'
-          - '--suppress=*:build/*'
+          - '--suppress=*:*/build/*'
           - '--suppress=unusedFunction:*/*'
           - '--suppress=unreadVariable:tests/*'
           - '--suppress=missingIncludeSystem'
