Replace cmakelang with clang-format and cmake-format
This matches the .pre-commit-config.yaml

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -16,7 +16,8 @@ jobs:
         # cuda version to install with separate action
         cuda-version: "12.2.0"
         # version for cmake-lint and cmake-format
-        cmakelang-version: "0.6.13"
+        clang-format-version: "v18.1.4"
+        cmake-format-version: "v0.6.13"
     steps:
 
       - name: Show git version
@@ -63,7 +64,9 @@ jobs:
 
       - name: Install pre-commit and related tools
         run: |
-          pip install pre-commit cmakelang==${{ env.cmakelang-version}}
+          pip install pre-commit
+          pip install clang-format==${{env.clang-format-version}}
+          pip install cmake-format==${{env.cmake-format-version}}
           sudo apt install cppcheck -y
 
       - name: Show tool versions
