Link tests to HIP libraries. test_hipfft still cannot find hipfft.h, this is to be debugged Because the test source files do not end in .hip, set_source_file_properties has to be used to enable compilation with hip instead of the host c++ compiler

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ include(Catch)
 set(COMPONENTS cu nvml nvrtc cufft vector_add)
 
 foreach(component ${COMPONENTS})
+  set_source_files_properties(test_${component}.cpp PROPERTIES LANGUAGE HIP)
   add_executable(test_${component} test_${component}.cpp)
   target_include_directories(
     test_${component} PRIVATE "${CMAKE_SOURCE_DIR}/include"
