Work around change of PACKAGE_PREFIX_DIR by find_package() when used with HIP

--- a/cmake/cudawrappers-config.cmake.in
+++ b/cmake/cudawrappers-config.cmake.in
@@ -1,5 +1,12 @@
 @PACKAGE_INIT@
 
+# We cannot assume PACKAGE_PREFIX_DIR remains unchanged after a call to find_package, see
+# https://github.com/Kitware/CMake/blob/140766867b2c8f8dff0e4d0d73e481b6944b5284/Modules/CMakePackageConfigHelpers.cmake#L79
+# find_package is used in the cudawrappers-dependencies.cmake file, so we need to set PACKAGE_PREFIX_DIR again
+# after including this file
+
+set(CUDAWRAPPERS_PACKAGE_PREFIX_DIR ${PACKAGE_PREFIX_DIR})
 include(${PACKAGE_PREFIX_DIR}/${CMAKE_INSTALL_LIBDIR}/cmake/@PROJECT_NAME@/cudawrappers-dependencies.cmake)
+set(PACKAGE_PREFIX_DIR ${CUDAWRAPPERS_PACKAGE_PREFIX_DIR})
 include(${PACKAGE_PREFIX_DIR}/${CMAKE_INSTALL_LIBDIR}/cmake/@PROJECT_NAME@/cudawrappers-exported.cmake)
 include(${PACKAGE_PREFIX_DIR}/${CMAKE_INSTALL_LIBDIR}/cmake/@PROJECT_NAME@/cudawrappers-helper.cmake)
