--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
         gcc-version: "12" 
+        cuda-version: "12.2.0"
         rocm-version: "6.1.0"
     steps:
 
@@ -23,6 +24,15 @@ jobs:
           echo "GITHUB_BASE_REF = $GITHUB_BASE_REF"
           echo "GITHUB_HEAD_REF = $GITHUB_HEAD_REF"
           echo "GITHUB_REF_NAME = $GITHUB_REF_NAME"
+
+      - name: Install cuda
+        uses: Jimver/cuda-toolkit@v0.2.11
+        with:
+          cuda: ${{ env.cuda-version }}
+          method: "network"
+          sub-packages: '["runtime", "nvcc", "nvml-dev", "nvrtc-dev", "nvtx"]'
+          non-cuda-sub-packages: '["libcufft-dev"]'
+          linux-local-args: '["--toolkit"]'
 
       - name: rocm-setup
         uses: neoblizz/rocm-setup@v0.1.0-beta
