--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v18.1.8
     hooks:
       - id: clang-format
+        exclude: macros.hpp
   - repo: https://github.com/pocc/pre-commit-hooks
     rev: v1.3.5
     hooks:
