--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           linux-local-args: '["--toolkit"]'
 
       - name: Install ROCm and HIP
-        uses: nlesc-recruit/rocm-setup
+        uses: nlesc-recruit/rocm-setup@6.1.3
 
       - name: Show tool versions
         run: |
