--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,12 @@ jobs:
           linux-local-args: '["--toolkit"]'
 
       - name: Install ROCm and HIP
-        uses: nlesc-recruit/rocm-setup@hipfft-6.1.3
+        shell: bash -el {0}
+        run: |
+          wget https://repo.radeon.com/amdgpu-install/6.1.3/ubuntu/jammy/amdgpu-install_6.1.60103-1_all.deb
+          apt -y install ./amdgpu-install_6.1.60103-1_all.deb
+          apt update
+          apt -y install rocm-hip-runtime-dev hipfft-dev
 
       - name: Show tool versions
         run: |
