Change TRUE to True

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ set_property(CACHE CUDAWRAPPERS_BACKEND PROPERTY STRINGS "CUDA" "HIP")
 if(${CUDAWRAPPERS_BACKEND} STREQUAL "CUDA")
   set(CUDAWRAPPERS_BACKEND_CUDA True)
 elseif(${CUDAWRAPPERS_BACKEND} STREQUAL "HIP")
-  set(CUDAWRAPPERS_BACKEND_HIP TRUE)
+  set(CUDAWRAPPERS_BACKEND_HIP True)
 else()
   message(
     FATAL_ERROR
