--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-22.04
     env:
         cuda-version: "12.2.0"
+        hip-version: "6.1.3"
+        amdgpu-version: "6.1.60103-1_all"
     steps:
 
       - name: Check out a copy of the repository
@@ -35,8 +37,8 @@ jobs:
       - name: Install ROCm and HIP
         shell: bash -el {0}
         run: |
-          wget https://repo.radeon.com/amdgpu-install/6.1.3/ubuntu/jammy/amdgpu-install_6.1.60103-1_all.deb
-          sudo apt -y install ./amdgpu-install_6.1.60103-1_all.deb
+          wget https://repo.radeon.com/amdgpu-install/${{ env.hip-version }}/ubuntu/jammy/amdgpu-install_${{ env.amdgpu-version }}.deb
+          sudo apt -y install ./amdgpu-install_${{ env.amdgpu-version }}.deb
           sudo apt update
           sudo apt -y install rocm-hip-runtime-dev hipfft-dev
 
