Dont overwrite CUDAWRAPPERS_BACKEND if already defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,11 @@ option(CUDAWRAPPERS_BUILD_TESTING "Build cudawrappers tests"
        ${CUDAWRAPPERS_TESTING_DEFAULT}
 )
 
+if(NOT DEFINED CUDAWRAPPERS_BACKEND)
+  set(CUDAWRAPPERS_BACKEND "CUDA")
+endif()
 set(CUDAWRAPPERS_BACKEND
-    "CUDA"
+    ${CUDAWRAPPERS_BACKEND}
     CACHE STRING "Backend API to use in cudawrappers"
 )
 set_property(CACHE CUDAWRAPPERS_BACKEND PROPERTY STRINGS "CUDA" "HIP")
