--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,9 +12,15 @@ FetchContent_MakeAvailable(Catch2)
 list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/contrib)
 include(Catch)
 
-set(COMPONENTS cu nvml nvrtc cufft vector_add)
+set(COMPONENTS cu nvrtc cufft vector_add)
+if(${CUDAWRAPPERS_BACKEND_CUDA})
+  list(APPEND COMPONENTS nvml)
+endif()
 
 foreach(component ${COMPONENTS})
+  if(${CUDAWRAPPERS_BACKEND_HIP})
+    set_source_files_properties(test_${component}.cpp PROPERTIES LANGUAGE HIP)
+  endif()
   add_executable(test_${component} test_${component}.cpp)
   target_include_directories(
     test_${component} PRIVATE "${CMAKE_SOURCE_DIR}/include"
@@ -26,7 +32,9 @@ set(LINK_LIBRARIES Catch2::Catch2 cudawrappers::cu)
 
 target_link_libraries(test_cu PUBLIC ${LINK_LIBRARIES})
 
-target_link_libraries(test_nvml PUBLIC ${LINK_LIBRARIES} cudawrappers::nvml)
+if(${CUDAWRAPPERS_BACKEND_CUDA})
+  target_link_libraries(test_nvml PUBLIC ${LINK_LIBRARIES} cudawrappers::nvml)
+endif()
 
 target_link_libraries(test_nvrtc PUBLIC ${LINK_LIBRARIES} cudawrappers::nvrtc)
 
