--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
     hooks:
       - id: cmake-format
       - id: cmake-lint
+        args: ['--line-width=90']
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.17
     hooks:
