--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ FetchContent_MakeAvailable(Catch2)
 list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/contrib)
 include(Catch)
 
-set(COMPONENTS cu nvrtc cufft vector_add graph)
+set(COMPONENTS cu nvrtc cufft vector_add graph nvtx)
 if(${CUDAWRAPPERS_BACKEND_CUDA})
   list(APPEND COMPONENTS nvml)
 endif()
@@ -45,3 +45,5 @@ target_link_libraries(
 )
 
 target_link_libraries(test_graph PUBLIC ${LINK_LIBRARIES} cudawrappers::nvrtc)
+
+target_link_libraries(test_nvtx PUBLIC ${LINK_LIBRARIES} cudawrappers::nvtx)
