Also install in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,11 @@ jobs:
         run: |
           cmake -DCUDAWRAPPERS_BUILD_TESTING=True -S . -B build
           make -C build -j
+          make -C build install
 
       - name: Build the code in HIP mode
         shell: bash -el {0}
         run: |
           cmake -DCUDAWRAPPERS_BUILD_TESTING=True -DCUDAWRAPPERS_BACKEND=HIP -DAMDGPU_TARGETS=gfx1101 -S . -B build
           make -C build -j
+          make -C build install
